se realiza el llamado a la API Finnhub y llama en conjunto varias acciones

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ build/
 # Archivos de entorno y configuración sensible
 .env
 application-*.properties
+application*.properties
 application-*.yml
 
 # Archivos generados por STS (Spring Tool Suite)
