JR-KAN-145: se termina documentación de los metodos, se actualiza atributos de git para los saltos de linea

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,12 @@
 /mvnw text eol=lf
 *.cmd text eol=crlf
+
+# Normalizar codigo fuente y configuraciones
+*.java text eol=lf
+*.xml text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+*.properties text eol=lf
+*.md text eol=lf
+*.gradle text eol=lf
+*.gitignore text eol=lf
