--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,43 @@
-spring:
-  application:
-    name: horizont
-  datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: update
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+      spring:
+        application:
+          name: horizont
 
-server:
-  port: 8080
+        datasource:
+          url: jdbc:h2:mem:testdb
+          driver-class-name: org.h2.Driver
+          username: sa
+          password: ""
 
-finnhub:
-  api:
-    url: https://finnhub.io/api/v1
-    key: d09tp49r01qus8rfcsb0d09tp49r01qus8rf
+        jpa:
+          database-platform: org.hibernate.dialect.H2Dialect
+          hibernate:
+            ddl-auto: update
+
+        h2:
+          console:
+            enabled: true
+            path: /h2-console
+
+        mail:
+          host: smtp.gmail.com
+          port: 587
+          username: tu-correo@gmail.com
+          password: tu-contraseña-o-clave-de-aplicación
+          properties:
+            mail:
+              smtp:
+                auth: true
+                starttls:
+                  enable: true
+
+      server:
+        port: 8080
+
+      finnhub:
+        api:
+          url: https://finnhub.io/api/v1
+          key: d09tp49r01qus8rfcsb0d09tp49r01qus8rf
+
+      #  API Key y Secret de Alpaca para uso con @Value
+      Alpaca_api_key: CKMDE1PS3JNCCCLKWYC0
+      Alpaca_api_secret: nzYn9viMp6SjNzz0AovW4IeUzNh4RwG4qW32f7nN
