--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- Solo el módulo de cifrado de Spring Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+		</dependency>
+
 		<!-- H2 Database -->
 		<dependency>
 			<groupId>com.h2database</groupId>
