--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ build/
 
 # Archivos de entorno y configuración sensible
 .env
+application.properties
+application.yml
 *.properties
 *.yml
 *.yaml
