--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
 		<!-- Solo el módulo de cifrado de Spring Security -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
